<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_main"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="clip_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/vacalogo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:paddingBottom="@dimen/activity_horizontal_margin_medium"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_horizontal_margin_medium"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="@dimen/titleTextSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/activity_vertical_margin">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/marker" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="map"
                android:paddingLeft="@dimen/activity_horizontal_margin_medium"
                android:text="@string/address"
                android:textSize="@dimen/infoTextSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingTop="@dimen/activity_vertical_margin_small">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:paddingRight="@dimen/activity_horizontal_margin_medium"
                android:src="@drawable/internet" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="@dimen/activity_vertical_margin_small"
                android:text="@string/website"
                android:textSize="@dimen/infoTextSize" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:paddingBottom="@dimen/activity_horizontal_margin_medium"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin_medium"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="@dimen/titleTextSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingTop="@dimen/activity_vertical_margin_small">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="353dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin_small"
            android:text="@string/about_us_content"
            android:textSize="@dimen/infoTextSize" />
    </LinearLayout>
</LinearLayout>
</ScrollView>